shopping-cart fixes